# -GNU-Linux-2025

./: README.md
01 Работа с терминалом и простой проект/: show.c
01_TerminalProject/: makefile  show
02 Многофайловая сборка/: Makefile  const.c  fun.c  prog.c
02_Multifile/: outlib.h
03 Обработка текстов и сценарии/: my_art.txt  randomize.sh
04 Отладка/: Makefile  gdb1.gdb  gdb2.gdb  range.c
04_Debugging/: gdb1.gdb  range.c
05 Регулярные выражения/: Makefile  esub.c
05_Regexps/: test.sh
06 Трассировка вызовов/: Makefile
06_Tracing/: move.c  protect.c
07 Адаптация к окружению/src/: Makefile.am
07 Адаптация к окружению/tests/: test.sh
07_Environmental/: configure.ac
07_Environmental/src/: rhasher.c
07_Environmental/tests/: Makefile.am
08 Интернационализация и локализация/: CMakeLists.txt
08 Интернационализация и локализация/src/: game.c
08_I18n/po/: ru.po
09 Сторонние исходники/: Makefile  main.c  patch1.diff  patch2.diff  patch3.diff
10 Библиотеки и тестирование/: configure.ac
10 Библиотеки и тестирование/src/: mbuf.h
10_LibTesting/src/: Makefile.am  mbuf.c
10_LibTesting/tests/: Makefile.am  test_mbuf.c
11 Информационное пространство и документирование/man/: Makefile.am  number-game.1
11 Информационное пространство и документирование/src/: number-game.c
11_Documenting/: Doxyfile.in  Makefile.am  README.md  configure.ac
11_Documenting/doc/: Makefile.am  mainpage.dox
11_Documenting/src/: Makefile.am
12 	 Установка и пакетирование/: Doxyfile  configure.ac
12 	 Установка и пакетирование/po/: Makefile.am  en.po
12 	 Установка и пакетирование/src/: myprog.c
12_InstallPackaging/: Makefile.am
12_InstallPackaging/man/: Makefile.am  myprog.1
12_InstallPackaging/po/: ru.po
12_InstallPackaging/src/: Makefile.am  libmylib.c  test_basic.c
